--- a/css/style.css
+++ b/css/style.css
@@ -1157,20 +1157,204 @@ section.f-left {
     padding: 40px;
 
   }
+}
+
+.section {
+  background-color: #F3F5EF
+  color: black;
+  height: 20rem;
+  margin-top: 1rem;
+  padding: 100px 0px;
+}
+
+
+
+ @media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 812px)
+  and (-webkit-min-device-pixel-ratio: 3) {
+
+    /*footer*/
+    section.f-left {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+    }
+
+    /*homepage*/
+    .icon {
+    width: 120px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 125px;
+    padding-left: 60px;
+}
+
+    section.projects{
+      background-color: #F3F5EF;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 28px;
+    }
+
+    h2 {
+      font-size:24px;
+    }
+
+    h3 {
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 16px;
+    }
+
+    .main-banner h2 {
+      justify-content: center;
+      text-align: left;
+      width: 976px;
+      height: 234px;
+      left: 154px;
+      top: 251px;
+    }
+
+    .main-banner{
+      padding: 20px;
+    }
+
+    .billow-project {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+
+    .billow-project p {
+      width: 237px;
+    }
+
+    .b1-container{
+      display: flex;
+    flex-direction: column;
+    align-content: start;
+    }
+
+    .b1-container a{
+      font-family: Public Sans;
+      line-height: 150%;
+      text-decoration: underline;
+      color: black;
+
+    }
+
+    .busybus-project {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .busybus-project p {
+    width: 237px;
+    line-height:150%;
+    }
+
+
+    .left-square {
+    display: none;
+
+    }
+
+    .b2-container img {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 289px;
+        padding: 20px;
+      }
+
+    .right-square {
+      display: none;
+    }
+
+    .b3-container {
+    display: flex;
+    flex-direction: column;
+    align-content: start;
+    }
+
+    .b4-container img {
+    display: flex;
+    flex-direction: column;
+    }
+
+    hr.ca-divider {
+      width: 50%;
+    padding-top: 0px;
+    margin-top: 0px;
+    }
+
+    .busybus-project {
+      padding: 20px;
+      justify-content: center;
+      align-content: center;
+    }
+    .busybus-project a {
+      font-family: Public Sans;
+      text-decoration: underline;
+      color: black;
+    }
+
+    /*busybus*/
+
+    section.bb-main {
+      display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+    }
+
+    .bb-intro {
+      align-content: center;
+      text-align: center;
+      margin: 20px;
+      padding: 20px;
+    }
 
 }
 
-/* ----------- Non-Retina Screens ----------- */
-@media screen
-  and (min-device-width: 1200px)
-  and (max-device-width: 1600px)
-  and (-webkit-min-device-pixel-ratio: 1) {
-}
 
-/* ----------- Retina Screens ----------- */
-@media screen
-  and (min-device-width: 1200px)
-  and (max-device-width: 1600px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (min-resolution: 192dpi) {
+
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+    h1 {
+      font-size: 28px;
+    }
+
+    h2 {
+      font-size:24px;
+    }
+
+    h3 {
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 16px;
+    }
+
+  .container {
+      display: flex;
+    flex-direction: column;
+    }
 }
