--- a/css/style.css
+++ b/css/style.css
@@ -1065,14 +1065,12 @@ footer {
   border-top: 1px solid black;
 }
 
-
-
 hr.orange-divider {
   border: 1px solid #DB9034;
   width: 95%;
   align-items: center;
 }
-}
+
 
 /* this is probably the only media query you need.*/
 @media screen and (max-width: 1024px) {
@@ -1223,7 +1221,6 @@ section.projects {
 
 
 /*about*/
-}
 section.about-main h2 {
     width: auto;
     padding: 40px;
@@ -1589,7 +1586,7 @@ section.f-left {
     flex-direction: column;
     align-items: center;
     float: none;
-    padding-bottom: 150px;
+    padding-bottom: 40px;
 }
 
 .c2-container form {
@@ -1604,6 +1601,7 @@ section.f-left {
 
 .contact-cta p {
     width: auto;
+    padding: 20px;
 }
 
 
@@ -1630,7 +1628,6 @@ footer {
     background-color: #F3F5EF;
     width: 100%;
     border-top: 1px solid black;
-}
 }
 
 /* use this one only to make minor tweaks for a smaller tablet screen after youve completed the above one and check the design on a tablet.*/
@@ -1700,7 +1697,9 @@ footer {
       p {
         font-size: 16px;
       }
-.main-banner {
+
+
+section.main-banner {
   padding: 60px;
 
 }
