project section updates

--- a/css/style.css
+++ b/css/style.css
@@ -123,8 +123,7 @@ right: 0px;
 
 section.projects{
   background-color: #F3F5EF;
-  height: 5rem;
-  padding: 1rem 1rem;
+  padding-bottom: 60px;
 }
 
 .main-banner h2 {
