--- a/css/style.css
+++ b/css/style.css
@@ -542,7 +542,6 @@ section.wireframes a {
    justify-content: center;
    align-items: center;
    align-content: center;
-   padding:60px 125px 60px 155px ;
  }
 
  .brand-1 p {
@@ -646,9 +645,16 @@ section.pref-test {
  align-items: center;
 }
 
-.pref-test2 img {
+/*.pref-test2 img {
   padding:20px 10px 40px 10px;
+}*/
+
+.pref-test2 {
+  display: flex;
+      flex-direction: row;
+      justify-content: space-around;
 }
+
 
 
 section.result {
