images flex updates

--- a/css/style.css
+++ b/css/style.css
@@ -653,6 +653,8 @@ section.pref-test {
   display: flex;
       flex-direction: row;
       justify-content: space-around;
+      width: 100%;
+padding-top: 20px;
 }
 
 
